# mcp-retreaver

./: .gitignore  README.md  pyproject.toml  retreaver_agent_context_guide.md  retreavernewapidocs.md
src/retreaver_host/: main.py  model_interface.py  orchestrator.py  ws_server.py
src/retreaver_mcp/: client.py  read_server.py  write_server.py
src/retreaver_mcp_servers/: client.py  launcher.py  process.py  read_server.py  write_server.py
src/retreaver_telegram/: bot.py  main.py
